# briefkasten

./: .coveragerc  .dockerignore  .gitignore  .lefthook.yaml  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  CHANGELOG.md  CHANGES.rst  Dockerfile  LICENSE.txt  Makefile  README.rst  appserver.cfg  deployment.cfg  development.cfg  mkdocs.yml  release-please-config.json  renovate.json  setup.cfg  setup.py  testing.yaml  watchdog-development.ini  watchdog.cfg  zeitonline.cfg
application/: .coveragerc  .gitignore  MANIFEST.in  Makefile  Pipfile  README.rst  debug_ttw.py  development.cfg  development.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  zeitonline.cfg
application/briefkasten/: __init__.py  commands.py  dropbox.py  housekeeping.py  notifications.py  testing.py  views.py  watchdog.py  worker.py
application/briefkasten/locale/: briefkasten.pot
application/briefkasten/templates/: dropbox_form.pt  dropbox_submission.pt  editor_email.j2  editor_email.pt  editor_reply.pt  feedback.pt  fingerprint.pt  master.pt
application/briefkasten/tests/: attachment.txt  conftest.py  test_dropbox.py  test_dropbox_archival.py  test_dropbox_cleanup.py  test_editor_access.py  test_janitor.py  test_replies.py  test_settings.py  test_submission.py  test_watchdog.py  unicode.txt
application/briefkasten/tests/drop_root_template/: settings.yaml
application/briefkasten/tests/gpghome/: .gitignore  pubring.gpg  pubring.gpg~  random_seed  secring.gpg  trustdb.gpg
application/buildout/: README.rst  appserver.cfg
application/middleware_scripts/: create-multipart.sh  process-attachments.sh  process-image.sh  process-pdf.sh  process.py  process.sh
application/themes/default/: default.html  rules.xml
application/themes/default/assets/: default.css
application/themes/fileuploader/: default.html  rules.xml
application/themes/fileuploader/assets/: style.css
application/themes/lite/: lite.html  rules.xml
application/themes/lite/assets/: lite.css
application/var/drop_root/: settings.yaml
deployment/: .gitignore  Dockerfile  Makefile  Pipfile  README.rst  __init__.py  appserver.py  base.conf  briefkasten.yml  cleanser.yml  example.ini  jailhost.py  main.yml  pkgwebserver.py  ploy.sh  poudriere.py  pyproject.toml  requirements.txt  startup-briefkasten-jail.sh  tox.ini  webserver.yml
deployment/bootstrap-files/: files.yml
deployment/bootstrap-files/vbox/: .gitignore  rc.conf
deployment/etc.sample/: briefkasten.crt  briefkasten.key  plain.conf  ploy.conf  vbox.conf
deployment/etc.sample/pgp_pubkeys/: README.rst
deployment/fabric_scripts/: __init__.py
deployment/files/: jdispatch.rc  jdispatch.sh
deployment/freebsd/: .gitignore  Makefile  README.rst  __init__.py  ansible.cfg  appserver-jail.cfg.in  appserver.yml  bootstrap.yml  bootstrap0.yml  bootstrap1.yml  briefkasten.conf.in  buildout.cfg  buildout.cfg.in  cleanser.yml  clear-setuptools-dependency-links  deployment-jail.cfg.in  host.example  jails_host.yml  nginx.conf.in  poudriere.yml  requirements.txt  site.yml  ssh_config  sshd_config  supervisord.conf.in  update_port_config.sh  webserver.yml
deployment/freebsd/bootstrap-files/: FreeBSD.conf
deployment/freebsd/deployment/: .gitignore
deployment/freebsd/etc/: aws.conf  aws.conf.sample
deployment/freebsd/etc.sample/: ploy.conf
deployment/freebsd/group_vars/: all.yml  jails_host  webserver.yml
deployment/freebsd/pgp_pubkeys/: .gitignore
deployment/freebsd/provisioning/: vm-master.yml
deployment/freebsd/provisioning/group_vars/: appserver.yml
deployment/freebsd/provisioning/host_vars/: vm-master
deployment/freebsd/provisioning/vm-master/: .gitignore  ssh_host_rsa_key
deployment/freebsd/setup/: appserver.py  appserver.yml  cleanser.yml  jails_host.py  setup.py  vm-master.yml  watchdog.py  webserver.yml
deployment/freebsd/setup/fabric_scripts/: __init__.py
deployment/freebsd/setup/group_vars/: all.yml
deployment/freebsd/setup/host_vars/: vm-master.yml
deployment/freebsd/vm-master/: fabfile.py  rc.conf  ssh_host_rsa_key.pub
deployment/group_vars/: all.yml
deployment/host_vars/: briefkasten.yml  vm-master.yml
deployment/roles/appserver/defaults/: main.yml
deployment/roles/appserver/files/: periodic.conf  pip.conf  requirements.txt
deployment/roles/appserver/tasks/: main.yml
deployment/roles/appserver/templates/: briefkasten.conf.j2  briefkasten.ini.j2  briefkasten_ssh_config.j2  buildout.cfg.j2  settings.yaml.j2  supervisord.conf.j2
deployment/roles/briefkasten/defaults/: main.yml
deployment/roles/briefkasten/files/: requirements.txt
deployment/roles/briefkasten/tasks/: main.yml
deployment/roles/common/handlers/: main.yml
deployment/roles/jailhost/files/: cert.pem  pkg.conf  pkg_repo.conf  portsnap  poudriere.cert
deployment/roles/jailhost/tasks/: main.yml  portsnap.yml  poudriere.yml
deployment/roles/jailhost/templates/: pkg_repo.conf
deployment/roles/poudriere/files/: 102amd64-make.conf  111amd64-make.conf  92amd64-make.conf  config.fish  pkg_list  pkg_repo.conf  publish-packages.sh
deployment/roles/poudriere/tasks/: main.yml
deployment/roles/poudriere/templates/: poudriere.conf.j2
deployment/roles/root_email/tasks/: main.yml
deployment/roles/supervisord/tasks/: main.yml
deployment/roles/supervisord/templates/: supervisord.conf.j2
deployment/roles/watchdog/files/: requirements.txt
deployment/roles/watchdog/tasks/: main.yml
deployment/roles/watchdog/templates/: watchdog.ini
deployment/roles/webserver/defaults/: main.yml
deployment/roles/webserver/files/: acme  acme_crontab  reload-nginx.sh
deployment/roles/webserver/tasks/: acme.yml  main.yml  ssl.yml
deployment/roles/webserver/templates/: account.conf  acme_crontab  ddns.key  nginx.conf
deployment/roles/worker/defaults/: main.yml
deployment/roles/worker/tasks/: main.yml
deployment/roles/worker/templates/: briefkasten_test.conf.j2  settings.yaml.j2  (+1 more)
deployment/templates/: cleanser_sshd_config  jdispatch.conf  jdispatch.sh  worker_known_hosts
watchdog/src/watchdog/: pyproject.toml  setup.cfg  setup.py
(+401 files in other folders)
