[project]
name = "briefkasten-deployment"
version = "0.4.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "ansible<5",
    "bsdploy",
    "keyring",
    "ploy",
    "ploy-ec2",
    "setuptools<82",
]

[tool.uv.sources]
bsdploy = { git = "https://github.com/witsch/bsdploy.git", rev = "use-extra-zfs-properties" }

[tool.ruff]
line-length = 92
target-version = "py314"


[tool.ruff.lint]
select = ["A", "B", "C4", "E", "EXE", "F", "FIX", "G", "PT", "S", "T10", "T20", "UP"]

[tool.ruff.lint.per-file-ignores]
"appserver.py" = ["S108"]

[dependency-groups]
lint = [
    "editorconfig-checker>=3.6.1",
    "lefthook>=2.1.10",
    "ruff>=0.15.22",
    "yamllint>=1.38.0",
]
