[project]
name = "briefkasten_watchdog"
version = '0.4'
description = "Perform functional testing of a Briefkasten instance"
dependencies = [
    "click",
    "zope.testbrowser",
    "pyquery",
    "prometheus-client",
]
classifiers = [
    "Programming Language :: Python",
    "Framework :: Pylons",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "License :: OSI Approved :: BSD License",
]

[project.scripts]
watchdog = "briefkasten_watchdog:cli"

[tool.setuptools]
packages = ["briefkasten_watchdog"]

[tool.ruff]
line-length = 102
target-version = "py314"

[tool.ruff.lint]
select = ["A", "B", "C4", "E", "EXE", "F", "FIX", "G", "PT", "S", "T10", "T20", "UP"]
ignore = ["C408", "FIX002", "G001", "G004", "UP025"]
